--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-simple-store": "^1.3.0",
