--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-simple-store": "^1.3.0",
+    "react-native-swipe-list-view": "^1.0.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.0"
   },
