--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-native-simple-store": "^1.3.0",
     "react-native-swipe-list-view": "^1.0.6",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.5.0",
-    "uniqid": "^4.1.1"
+    "react-navigation": "^1.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
