--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "geolib": "^2.0.24",
     "lodash": "^4.17.5",
     "macaddress": "^0.2.8",
     "react": "^16.3.0-alpha.1",
