--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-qrcode": "^0.2.6",
     "react-native-simple-store": "^1.3.0",
     "react-native-swipe-list-view": "^1.0.6",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.0"
   },
