--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-modal": "^5.3.0",
-    "react-native-qrcode": "^0.2.6",
+    "react-native-qrcode-svg": "^5.0.6",
     "react-native-simple-store": "^1.3.0",
+    "react-native-svg": "^6.3.1",
     "react-native-swipe-list-view": "^1.0.6",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
