--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "macaddress": "^0.2.8",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-camera": "^1.0.2",
     "react-native-modal": "^5.3.0",
+    "react-native-qrcode-scanner": "^0.0.30",
     "react-native-qrcode-svg": "^5.0.6",
     "react-native-simple-store": "^1.3.0",
     "react-native-svg": "^6.3.1",
