--- a/ios/sportifyApp/Info.plist
+++ b/ios/sportifyApp/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Sportify a besoin d'avoir accès à l'appareil photo pour pouvoir scanner les QR codes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Quicksand-Bold.ttf</string>
