--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-qrcode-scanner": "^0.0.30",
     "react-native-qrcode-svg": "^5.0.6",
     "react-native-simple-store": "^1.3.0",
+    "react-native-splash-screen": "^3.0.6",
     "react-native-svg": "^6.3.1",
     "react-native-swipe-list-view": "^1.0.6",
     "react-native-swiper": "^1.5.13",
