--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.54.0",
     "react-native-camera": "^1.0.2",
     "react-native-modal": "^5.3.0",
+    "react-native-parallax": "^0.3.0",
     "react-native-qrcode-scanner": "^0.0.30",
     "react-native-qrcode-svg": "^5.0.6",
     "react-native-simple-store": "^1.3.0",
