--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,13 +142,29 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile project(':react-native-camera')
     compile project(':react-native-splash-screen')
-    compile project(':react-native-camera')
     compile project(':react-native-svg')
     compile project(':react-native-vector-icons')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    // compile project(':react-native-camera')
+    compile (project(':react-native-camera')) {
+        exclude group: "com.android.support"
+
+        // uncomment this if also com.google.android.gms:play-services-vision versions are conflicting
+        // this can happen if you use react-native-firebase
+        // exclude group: "com.google.android.gms"
+    }
+
+    compile ('com.android.support:exifinterface:26.0.1') {
+        force = true;
+    }
+
+    // uncomment this if you uncommented the previous line
+    // compile ('com.google.android.gms:play-services-vision:11.6.0') {
+    //    force = true;
+    // }
 }
 
 // Run this once to be able to run the application with BUCK
