--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-svg": "^6.3.1",
     "react-native-swipe-list-view": "^1.0.6",
     "react-native-swiper": "^1.5.13",
+    "react-native-ui-kitten": "^3.0.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.0"
   },
